force-app/main/default/objects/Policy_Claim__c/fields/Incurred__c.field-meta.xml
<CustomField>
    <fullName>Incurred__c</fullName>
    <formula>GL_5010__c + GL_5000__c + GL_5035__c + GL_5030__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>