force-app/main/default/objects/Policy_Claim__c/fields/Incurred_Ceded_LAE__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Ceded_LAE__c</fullName>
    <formula>Unpaid_Reserve_Ceded_LAE__c +
 Payment_Ceded_LAE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred Ceded LAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>