force-app/main/default/objects/Policy_Claim__c/fields/Incurred_Direct_LAE__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Direct_LAE__c</fullName>
    <formula>Unpaid_Reserves_Direct_LAE__c +
Payment_Direct_LAE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred Direct LAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>