force-app/main/default/objects/Policy_Claim__c/fields/Incurred_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incurred Email Send</label>
    <type>Checkbox</type>
</CustomField>