force-app/main/default/objects/Policy_Claim__c/fields/Incurred_Retained_LAE__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Retained_LAE__c</fullName>
    <formula>Incurred_Direct_LAE__c -
  Incurred_Ceded_LAE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred Retained LAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>