force-app/main/default/objects/Policy_Claim__c/fields/Incurred_Retained_Loss__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Retained_Loss__c</fullName>
    <formula>Incurred_Direct_Loss__c -
  Incurred_Ceded_Loss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred Retained Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>