force-app/main/default/objects/Policy_Claim__c/fields/Incurred_Total__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Total__c</fullName>
    <formula>LAE_Incurred_Total__c +  Loss_Incurred_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>