force-app/main/default/objects/Policy_Claim__c/fields/Invoices_Box_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Box_Folder_Id__c</fullName>
    <label>Invoices Box Folder Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>