force-app/main/default/objects/Policy_Claim__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <description>Is Claim in a Closed Status</description>
    <formula>IF (ISPICKVAL(Claim_Status__c, &quot;Closed&quot;)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>