force-app/main/default/objects/Policy_Claim__c/fields/Is_Non_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Client__c</fullName>
    <label>Claimant is Non-Client of Insured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>