force-app/main/default/objects/Policy_Claim__c/fields/Is_Non_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Lawyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non-Lawyer</label>
    <type>Checkbox</type>
</CustomField>