force-app/main/default/objects/Policy_Claim__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <description>Is claim in a non-closed status?</description>
    <formula>IF (
  ISPICKVAL(Claim_Status__c, &quot;Closed&quot;)
,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>