force-app/main/default/objects/Policy_Claim__c/fields/Is_Reserve_Creation_Block__c.field-meta.xml
<CustomField>
    <fullName>Is_Reserve_Creation_Block__c</fullName>
    <formula>OR(
Not(Policy__r.Active__c)
,

   OR(ISPICKVAL(File_Type__c, &apos;ARDC Complaint&apos;) ,
      ISPICKVAL(File_Type__c, &apos;Memo&apos;)
      )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reserve Creation Block</label>
    <type>Checkbox</type>
</CustomField>