force-app/main/default/objects/Policy_Claim__c/fields/ISBAM_Processed__c.field-meta.xml
<CustomField>
    <fullName>ISBAM_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISBAM Processed</label>
    <type>Checkbox</type>
</CustomField>