force-app/main/default/objects/Policy_Claim__c/fields/JE_Entry_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>JE_Entry_Name_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>JE Entry Name Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>