force-app/main/default/objects/Policy_Claim__c/fields/LAE_Incurred_Total__c.field-meta.xml
<CustomField>
    <fullName>LAE_Incurred_Total__c</fullName>
    <formula>GL_5035__c +  GL_5030__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LAE Incurred Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>