force-app/main/default/objects/Policy_Claim__c/fields/LAE_Pay__c.field-meta.xml
<CustomField>
    <fullName>LAE_Pay__c</fullName>
    <label>LAE Pay</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>