force-app/main/default/objects/Policy_Claim__c/fields/LAEPay__c.field-meta.xml
<CustomField>
    <fullName>LAEPay__c</fullName>
    <formula>ABS( GL_5030__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LAE Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>