force-app/main/default/objects/Policy_Claim__c/fields/Latest_Claim_Note__c.field-meta.xml
<CustomField>
    <fullName>Latest_Claim_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Claim Note</label>
    <referenceTo>Note__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>