force-app/main/default/objects/Policy_Claim__c/fields/Law_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Law_Disposition__c</fullName>
    <label>Law Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed with Neither Indemnity nor LAE</fullName>
            </value>
            <value>
                <fullName>Closed with both Indemnity and LAE</fullName>
            </value>
            <value>
                <fullName>Closed with indemnity payment only</fullName>
            </value>
            <value>
                <fullName>Settled by Insured without ISBA Mutual Consent</fullName>
            </value>
            <value>
                <fullName>Closed with LAE payment only</fullName>
            </value>
            <value>
                <fullName>Coverage Denied</fullName>
            </value>
            <value>
                <fullName>Closed due to Claim Repair with LAE payment</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Settled by Mediation</fullName>
            </value>
            <value>
                <fullName>Accepted/Covered by Another Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Tried to Final Judgement without Indemnity Payment</fullName>
            </value>
            <value>
                <fullName>Tried to Final Judgement with Indemnity Payment</fullName>
            </value>
            <value>
                <fullName>Resolved through Arbitration</fullName>
            </value>
            <value>
                <fullName>No manner in which disposed indicated</fullName>
            </value>
            <value>
                <fullName>Accepted / Covered by Another</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>