force-app/main/default/objects/Policy_Claim__c/fields/LawDispositionId__c.field-meta.xml
<CustomField>
    <fullName>LawDispositionId__c</fullName>
    <label>LawDispositionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>