force-app/main/default/objects/Policy_Claim__c/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup from policy lawyer</description>
    <label>Lawyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Policy__c</field>
            <operation>equals</operation>
            <valueField>Policy_Lawyer__c.Policy__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Policy_Lawyer__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>