force-app/main/default/objects/Policy_Claim__c/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <formula>LawyerNew__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawyer Name</label>
    <type>Text</type>
</CustomField>