force-app/main/default/objects/Policy_Claim__c/fields/LawyerName__c.field-meta.xml
<CustomField>
    <fullName>LawyerName__c</fullName>
    <externalId>true</externalId>
    <label>LawyerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>