force-app/main/default/objects/Policy_Claim__c/fields/LawyerNew__c.field-meta.xml
<CustomField>
    <fullName>LawyerNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer New</label>
    <referenceTo>AccountContactJunction__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>