force-app/main/default/objects/Policy_Claim__c/fields/Lawyers__c.field-meta.xml
<CustomField>
    <fullName>Lawyers__c</fullName>
    <label>Lawyers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>