force-app/main/default/objects/Policy_Claim__c/fields/Legacy_Claim_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Claim_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Claim ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>