force-app/main/default/objects/Policy_Claim__c/fields/Lien__c.field-meta.xml
<CustomField>
    <fullName>Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lien</label>
    <type>Checkbox</type>
</CustomField>