force-app/main/default/objects/Policy_Claim__c/fields/Loss_Incurred_Total__c.field-meta.xml
<CustomField>
    <fullName>Loss_Incurred_Total__c</fullName>
    <formula>GL_5010__c +  GL_5000__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Incurred Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>