force-app/main/default/objects/Policy_Claim__c/fields/Loss_Pay__c.field-meta.xml
<CustomField>
    <fullName>Loss_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loss Pay</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>