force-app/main/default/objects/Policy_Claim__c/fields/Loss_Res__c.field-meta.xml
<CustomField>
    <fullName>Loss_Res__c</fullName>
    <formula>GL_5010__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Res</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>