force-app/main/default/objects/Policy_Claim__c/fields/Loss_Reserve_Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reserve_Last_Transaction_Date__c</fullName>
    <label>Loss Reserve Last Transaction Date</label>
    <type>Date</type>
</CustomField>