force-app/main/default/objects/Policy_Claim__c/fields/LossPay__c.field-meta.xml
<CustomField>
    <fullName>LossPay__c</fullName>
    <formula>ABS( GL_5000__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>