force-app/main/default/objects/Policy_Claim__c/fields/MainLawyerEntityName__c.field-meta.xml
<CustomField>
    <fullName>MainLawyerEntityName__c</fullName>
    <label>MainLawyerEntityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>