force-app/main/default/objects/Policy_Claim__c/fields/Non_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Non_Lawyer__c</fullName>
    <label>Non-Lawyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>