force-app/main/default/objects/Policy_Claim__c/fields/Occur_Date__c.field-meta.xml
<CustomField>
    <fullName>Occur_Date__c</fullName>
    <label>Occur Date</label>
    <type>Date</type>
</CustomField>