force-app/main/default/objects/Policy_Claim__c/fields/Parent_Claim__c.field-meta.xml
<CustomField>
    <fullName>Parent_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Claim</label>
    <referenceTo>Policy_Claim__c</referenceTo>
    <relationshipLabel>Related Claims</relationshipLabel>
    <relationshipName>Policy_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>