force-app/main/default/objects/Policy_Claim__c/fields/Payable_Reference_Running_Number__c.field-meta.xml
<CustomField>
    <fullName>Payable_Reference_Running_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payable Reference Running Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>