force-app/main/default/objects/Policy_Claim__c/fields/Payment_Retained_LAE__c.field-meta.xml
<CustomField>
    <fullName>Payment_Retained_LAE__c</fullName>
    <formula>Payment_Direct_LAE__c -
 Payment_Ceded_LAE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Retained LAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>