force-app/main/default/objects/Policy_Claim__c/fields/Payment_Retained_Loss__c.field-meta.xml
<CustomField>
    <fullName>Payment_Retained_Loss__c</fullName>
    <formula>Payment_Direct_Loss__c -
  Payment_Ceded_Loss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Retained Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>