force-app/main/default/objects/Policy_Claim__c/fields/Payment_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Total__c</fullName>
    <formula>Loss_Payment_Total__c +  LAE_Payment_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>