force-app/main/default/objects/Policy_Claim__c/fields/Per_Claim_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Per_Claim_Deductible__c</fullName>
    <label>Per Claim Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>