force-app/main/default/objects/Policy_Claim__c/fields/Per_Claim_Deductible_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Per_Claim_Deductible_Consumed__c</fullName>
    <formula>Per_Claim_Deductible_Loss_Consumed__c +
Per_Claim_Deductible_LAE_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Claim Deductible Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>