force-app/main/default/objects/Policy_Claim__c/fields/Per_Claim_Deductible_formula__c.field-meta.xml
<CustomField>
    <fullName>Per_Claim_Deductible_formula__c</fullName>
    <formula>Per_Claim_Deductible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Claim Deductible (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>