force-app/main/default/objects/Policy_Claim__c/fields/Per_Claim_Deductible_LAE_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Per_Claim_Deductible_LAE_Consumed__c</fullName>
    <formula>ABS( GL_5031__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Claim Deductible LAE Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>