force-app/main/default/objects/Policy_Claim__c/fields/Pleadings_Box_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Pleadings_Box_Folder_Id__c</fullName>
    <label>Pleadings Box Folder Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>