force-app/main/default/objects/Policy_Claim__c/fields/Plus_Box__c.field-meta.xml
<CustomField>
    <fullName>Plus_Box__c</fullName>
    <label>Plus Box</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>