force-app/main/default/objects/Policy_Claim__c/fields/Policy_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Cancel_Date__c</fullName>
    <label>Policy Cancel Date</label>
    <type>Date</type>
</CustomField>