force-app/main/default/objects/Policy_Claim__c/fields/Policy_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Policy_Deductible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Deductible</label>
    <referenceTo>Deductible_Factor__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>