force-app/main/default/objects/Policy_Claim__c/fields/Policy_ERE_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_ERE_Date__c</fullName>
    <label>Policy ERE Date</label>
    <type>Date</type>
</CustomField>