force-app/main/default/objects/Policy_Claim__c/fields/Policy_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expire_Date__c</fullName>
    <label>Policy Expire Date</label>
    <type>Date</type>
</CustomField>