force-app/main/default/objects/Policy_Claim__c/fields/Policy_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Policy_Incurred__c</fullName>
    <formula>Policy__r.All_Claims_Incurred__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Incurred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>