force-app/main/default/objects/Policy_Claim__c/fields/Policy_Limit_Demand__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Limit Demand</label>
    <type>Checkbox</type>
</CustomField>