force-app/main/default/objects/Policy_Claim__c/fields/Policy_Limit_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Limit ID</label>
    <referenceTo>ILF_Coverage_Factor__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>