force-app/main/default/objects/Policy_Claim__c/fields/Policy_Mini_Tail_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Mini_Tail_Date__c</fullName>
    <label>Policy_Mini_Tail_Date</label>
    <type>Date</type>
</CustomField>