force-app/main/default/objects/Policy_Claim__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;   Policy__c  , Policy__r.Policy_Number__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>