force-app/main/default/objects/Policy_Claim__c/fields/Policy_Prior_Acts_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Prior_Acts_Date__c</fullName>
    <formula>Policy__r.Policy_Retroactive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Prior Acts Date</label>
    <type>Date</type>
</CustomField>