force-app/main/default/objects/Policy_Claim__c/fields/Policy_Remaining_By_All_Claims__c.field-meta.xml
<CustomField>
    <fullName>Policy_Remaining_By_All_Claims__c</fullName>
    <formula>Aggregate_Limit_For_All_Claims__c -
 Policy_Incurred__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>