force-app/main/default/objects/Policy_Claim__c/fields/Policy_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Policy_Suffix__c</fullName>
    <formula>VALUE(MID( 
 Policy__r.Name , 
 FIND( &quot;-&quot;,Policy__r.Name)+1, 
 If(FIND( &quot;-&quot;,Policy__r.Name,FIND( &quot;-&quot;,Policy__r.Name)+1) == 0,LEN(Policy__r.Name)+1,FIND( &quot;-&quot;,Policy__r.Name,FIND( &quot;-&quot;,Policy__r.Name)+1)-(FIND( &quot;-&quot;,Policy__r.Name)+1)) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Suffix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>