force-app/main/default/objects/Policy_Claim__c/fields/Policy_Treaty_Year__c.field-meta.xml
<CustomField>
    <fullName>Policy_Treaty_Year__c</fullName>
    <formula>YEAR( Policy__r.Treaty_Version__r.Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Treaty Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>