force-app/main/default/objects/Policy_Claim__c/fields/Reimburse__c.field-meta.xml
<CustomField>
    <fullName>Reimburse__c</fullName>
    <label>Reimburse</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>