force-app/main/default/objects/Policy_Claim__c/fields/ReinsurerReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReinsurerReportDate__c</fullName>
    <label>ReinsurerReportDate</label>
    <type>Date</type>
</CustomField>