force-app/main/default/objects/Policy_Claim__c/fields/Remaining_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Deductible__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Remaining Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>