force-app/main/default/objects/Policy_Claim__c/fields/ReopenDate__c.field-meta.xml
<CustomField>
    <fullName>ReopenDate__c</fullName>
    <label>Reopen Date</label>
    <type>Date</type>
</CustomField>