force-app/main/default/objects/Policy_Claim__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>