force-app/main/default/objects/Policy_Claim__c/fields/Reserve_LAE__c.field-meta.xml
<CustomField>
    <fullName>Reserve_LAE__c</fullName>
    <defaultValue>$Setup.Claim_Setting__c.Open_Reserve_LAE_Value__c</defaultValue>
    <label>zzzOpen Reserve LAE</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>