force-app/main/default/objects/Policy_Claim__c/fields/Reserve_Total__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Total__c</fullName>
    <formula>LAE_Reserve_Total__c +   Loss_Reserve_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>