force-app/main/default/objects/Policy_Claim__c/fields/ROR__c.field-meta.xml
<CustomField>
    <fullName>ROR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROR</label>
    <type>Checkbox</type>
</CustomField>