force-app/main/default/objects/Policy_Claim__c/fields/Schedule_ERE__c.field-meta.xml
<CustomField>
    <fullName>Schedule_ERE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule ERE</label>
    <type>Checkbox</type>
</CustomField>