force-app/main/default/objects/Policy_Claim__c/fields/Settle_Date__c.field-meta.xml
<CustomField>
    <fullName>Settle_Date__c</fullName>
    <label>Settle Date</label>
    <type>Date</type>
</CustomField>