force-app/main/default/objects/Policy_Claim__c/fields/SF_file_alert_subject__c.field-meta.xml
<CustomField>
    <fullName>SF_file_alert_subject__c</fullName>
    <formula>&quot;New file uploaded for: &quot; + Name + &quot; (&quot; + Firm_Name__c + &quot;) &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_file_alert_subject</label>
    <type>Text</type>
</CustomField>