force-app/main/default/objects/Policy_Claim__c/fields/sFiles_Path_Override__c.field-meta.xml
<CustomField>
    <fullName>sFiles_Path_Override__c</fullName>
    <formula>Account__r.sharepoint_folder_id__c + &apos;,CLAIMS&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sFiles Path Override</label>
    <type>Text</type>
</CustomField>