force-app/main/default/objects/Policy_Claim__c/fields/Storage_Carton__c.field-meta.xml
<CustomField>
    <fullName>Storage_Carton__c</fullName>
    <label>Storage Carton</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>