force-app/main/default/objects/Policy_Claim__c/fields/Suit__c.field-meta.xml
<CustomField>
    <fullName>Suit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suit</label>
    <type>Checkbox</type>
</CustomField>