force-app/main/default/objects/Policy_Claim__c/fields/Suit_Date__c.field-meta.xml
<CustomField>
    <fullName>Suit_Date__c</fullName>
    <label>Suit Date</label>
    <type>Date</type>
</CustomField>