force-app/main/default/objects/Policy_Claim__c/fields/Suit_Date_Show__c.field-meta.xml
<CustomField>
    <fullName>Suit_Date_Show__c</fullName>
    <formula>Suit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suit Date Show</label>
    <type>Date</type>
</CustomField>