force-app/main/default/objects/Policy_Claim__c/fields/SuitShow__c.field-meta.xml
<CustomField>
    <fullName>SuitShow__c</fullName>
    <formula>Suit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suit</label>
    <type>Checkbox</type>
</CustomField>